@@ -941,6 +941,7 @@ Michael Simcich
 Ionel Simionescu
 Kirill Simonov
 Nathan Paul Simons
+Guilherme Simões
 Ravi Sinha
 Janne Sinkkonen
 Ng Pheng Siong
